# libquestk

./: .gitignore  README.md  meson.build
inc/: queue.h  stack.h
src/: meson.build
src/model/: Makefile  listqueue.c  liststack.c  meson.build  person.c  queue.c  queuebase.c  stack.c  stackbase.c  treebase.c  treeitem.c  treelist.c
